# taskproject

./: db.sqlite3  manage.py  pyproject.toml
djangoProject1/: settings.py  urls.py
tasks/: admin.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_table.py
templates/: base.html
templates/registration/: register.html
templates/tasks/: delete.html  list.html
user/: apps.py
