[tool.poetry]
name = "djangoproject1"
version = "0.1.0"
description = ""
authors = ["Nastya Izofatova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
django-crispy-forms = "^2.0"
psycopg = "^3.1.9"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.test.dependencies]
django-debug-toolbar = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
